# mathlib

./: CMakeLists.txt
include/mathlib/: math.h
